# staff-manager

./: .env.example  .gitignore  README.md  config.py  database.py  pyproject.toml
app/: config.py  database.py  main.py
app/models/: __init__.py  employee.py  user.py
app/routers/: employees.py
app/schemas/: auth.py  employee.py
app/services/: employee_service.py
