[project]
name = "staff-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "colorlog>=6.10.1",
    "fastapi[standard]>=0.136.0",
    "pydantic>=2.13.3",
    "pyjwt>=2.12.1",
    "pytest>=9.0.3",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.45.0",
]
